- More inbuilt team features, such as disabling collision for team members, hiding players nametags etc.

Improvements:
- Added a character ban list in the config
- Added the ability to change the default team color

Bug Fixes: 
- Added a hard ban on the symbol '&' as it caused many problems within the plugin
- Fixed problem where some messages could not contain placeholders

3.1.14: 
Features: 
- Added support for polish
- Added team enderchests
- Added the option for individual teams to toggle pvp for their team with /team pvp

Improvements:
- Added an allowed characters list for team names, leave blank if you do not want to utilise it
- Score for a kill is configurable

Bug Fixes:
- Fixed bypass on adding color codes to team names
- Fixed bug causing team balance to be displayed incorrectly (https://github.com/booksaw/BetterTeams/issues/37)

3.1.15: 
Features: 
- Configurable aliases for /team and /teama command (for example /clan) (https://github.com/booksaw/BetterTeams/issues/42)
- Players can be referenced by @a and @p (https://github.com/booksaw/BetterTeams/issues/41)
- Added spam killing prevention to stop score farming (https://github.com/booksaw/BetterTeams/issues/43)
	
Improvements:
- Full Polish translation is now avaliable (https://github.com/booksaw/BetterTeams/issues/48)
- Added a way to use player name instead of player display name in team/ally chat (https://github.com/booksaw/BetterTeams/issues/49)
- Added placeholder support for chat prefixing (https://github.com/booksaw/BetterTeams/issues/45)
- Teams can be referenced by a player within them instead of just in commands (https://github.com/booksaw/BetterTeams/issues/41)

Bug Fixes: 
- Baltop Holo sorts after score not balance (https://github.com/booksaw/BetterTeams/issues/46)

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
