@@ -37,7 +37,7 @@ public class InviteCommand extends TeamSubCommand {
 			return new CommandResponse("invite.inTeam");
 		}
 
-		int limit = Main.plugin.getConfig().getInt("teamLimit");
+		int limit = Main.plugin.getConfig().getInt("levels.l" + team.getLevel() + ".teamLimit");
 
 		if (limit > 0 && limit <= team.getMembers().size()) {
 			return new CommandResponse("invite.full");
